fixed unwrapping of array in bookmark_view

--- a/webroot/css/default.css
+++ b/webroot/css/default.css
@@ -159,7 +159,7 @@ left, middle, right {
 }
 
 middle {
-	float: left;
+	//float: left;
 	padding: 30px;
 }
 
